--- a/PaginaParroquia/PaginaParroquia/Web.config
+++ b/PaginaParroquia/PaginaParroquia/Web.config
@@ -21,7 +21,7 @@
   </appSettings>
   <system.web>
       <authentication mode="Forms">
-    <forms loginUrl="~/Home/Index" defaultUrl="~/" timeout="1" slidingExpiration="true"></forms>
+    <forms loginUrl="~/Login/Index" defaultUrl="~/Home/Index" timeout="1" slidingExpiration="true"></forms>
   </authentication>
     <roleManager enabled="true" defaultProvider="MyProvider"> 
       <providers>
