--- a/PaginaParroquia/PaginaParroquia/Web.config
+++ b/PaginaParroquia/PaginaParroquia/Web.config
@@ -9,11 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source= DESKTOP-3MRBRU3;Initial Catalog= PaginaParroquia;Integrated Security = True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source= localhost;Initial Catalog= PaginaParroquia;Integrated Security = True" providerName="System.Data.SqlClient" />
     <add name="UsuarioModel" connectionString="data source=localhost;initial catalog=ParroquiaSC;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="UsuariosModel" connectionString="data source=localhost;initial catalog=ParroquiaSC;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="Personas" connectionString="data source=DESKTOP-3MRBRU3;initial catalog=ParroquiaSC;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="SacramentosModel" connectionString="data source=DESKTOP-3MRBRU3;initial catalog=ParroquiaSC;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Personas" connectionString="data source=localhost;initial catalog=ParroquiaSC;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="SacramentosModel" connectionString="data source=localhost;initial catalog=ParroquiaSC;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
