Creacion y cambios en Bautismo, faltan los filtros del index de bautismo para que quede lista la sección.

--- a/PaginaParroquia/PaginaParroquia/PaginaParroquia.csproj
+++ b/PaginaParroquia/PaginaParroquia/PaginaParroquia.csproj
@@ -503,6 +503,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\BautismosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\PersonasController.cs" />
@@ -641,6 +642,11 @@
     <Content Include="Views\Personas\Details.cshtml" />
     <Content Include="Views\Personas\Edit.cshtml" />
     <Content Include="Views\Personas\Index.cshtml" />
+    <Content Include="Views\Bautismos\Create.cshtml" />
+    <Content Include="Views\Bautismos\Delete.cshtml" />
+    <Content Include="Views\Bautismos\Details.cshtml" />
+    <Content Include="Views\Bautismos\Edit.cshtml" />
+    <Content Include="Views\Bautismos\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
